removing en set de as default lang

--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -57,10 +57,9 @@
         "options": {
           "values": [
             "de",
-            "it",
-            "en"
+            "it"
           ],
-          "default": "en"
+          "default": "de"
         }
       },     
       {
