--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,6 @@ on:
 env:
   NODE_VERSION: 14.x
 
-
 jobs:
   test:
     runs-on: ubuntu-22.04
@@ -32,8 +31,8 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: noi-techpark/github-actions/env-file@v2
-        env:          
-          X_TOURISM_BASE_PATH: "https://api.tourism.testingmachine.eu/v1"
+        env:
+          X_TOURISM_BASE_PATH: 'https://api.tourism.testingmachine.eu/v1'
 
       - uses: noi-techpark/github-actions/npm-build@v2
         with:
@@ -55,7 +54,7 @@ jobs:
 
       - uses: noi-techpark/github-actions/env-file@v2
         env:
-          X_TOURISM_BASE_PATH: "https://tourism.opendatahub.com/v1"
+          X_TOURISM_BASE_PATH: 'https://tourism.opendatahub.com/v1'
 
       - uses: noi-techpark/github-actions/npm-build@v2
         with:
@@ -66,4 +65,4 @@ jobs:
         with:
           keycloak-secret: ${{secrets.WCSTORE_CLI_KEYCLOAK_SECRET_PROD}}
           version-tag: ${{github.ref_name}}
-          production: "true"
+          production: 'true'
