--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,17 @@
 #
 # SPDX-License-Identifier: CC0-1.0
 
-version: "3"
+version: '3'
 services:
   app:
-    build: 
+    build:
       context: .
       dockerfile: infrastructure/docker/node.dockerfile
     volumes:
       - ./:/code
     working_dir: /code
-    command: sh -c "test -d node_modules || npm install; npm run wc"    
-    #command: sh -c "npm run wc"    
+    command: sh -c "test -d node_modules || npm install; npm run wc"
+    #command: sh -c "npm run wc"
   # serve:
   #   image: python:3.6-alpine
   #   volumes:
