--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack serve --config webpack.dev.js",
-    "demo": "webpack --config webpack.demo.js"
+    "demo": "webpack --config webpack.demo.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "css-loader": "^2.1.1",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "file-loader": "^3.0.1",
+    "globals": "^16.3.0",
     "lerna": "^3.13.1",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "prettier": "^3.6.2",
     "raw-loader": "^2.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
