manifest test fix

--- a/wcs-manifest.json
+++ b/wcs-manifest.json
@@ -43,7 +43,7 @@
             "civis.geoserver.cyclewaystyrol",
             "dservices3.arcgis.com.radrouten_tirol"
           ],
-          "default": ["civis.geoserver.intermunicipalcyclingroutes"]
+          "default": "civis.geoserver.intermunicipalcyclingroutes"
         }
       },
       {
