adding mobility api to web component

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-TOURISM_BASE_PATH="https://api.tourism.testingmachine.eu/v1"
+TOURISM_BASE_PATH="https://tourism.api.opendatahub.testingmachine.eu/v1"
+MOBILITY_BASE_PATH="https://mobility.api.opendatahub.testingmachine.eu/v2"
